[package]

name = "stopwatch"
version = "0.0.8"
authors = ["T.J. Telan <tj@tjtelan.com>", "Chucky Ellison <cme@freefour.com>"]

description = "A stopwatch library for timing things."
repository = "https://github.com/tjtelan/rust-stopwatch"
readme = "README.md"
keywords = ["stopwatch", "timing"]
license = "MIT"

[dependencies]
num = { version = "0.2", default_features = false }
